--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "ethers": "^5.7.0",
     "hygen": "^6.2.8",
     "next": "12.2.4",
     "react": "18.2.0",
