--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "axios": "^0.27.2",
     "ethers": "^5.7.0",
+    "firebase": "^9.9.3",
     "hygen": "^6.2.8",
     "next": "12.2.4",
     "react": "18.2.0",
